// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders accordion element with heading and title 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
        "overflow": "hidden",
        "width": "100%",
      },
      Object {
        "borderColor": "rgba(33, 33, 33, 0.4)",
        "borderWidth": 1,
      },
      Object {
        "borderRadius": 5,
      },
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(33, 33, 33, 0.4)",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(33, 33, 33, 0.87)",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      Heading
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders accordion element with heading, title and custom expand/collapse icons 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
        "overflow": "hidden",
        "width": "100%",
      },
      Object {
        "borderColor": "rgba(33, 33, 33, 0.4)",
        "borderWidth": 1,
      },
      Object {
        "borderRadius": 5,
      },
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(33, 33, 33, 0.4)",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(33, 33, 33, 0.87)",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      Heading
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders colored accordion element with heading and title 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
        "overflow": "hidden",
        "width": "100%",
      },
      Object {
        "borderColor": "aquamarine",
        "borderWidth": 1,
      },
      Object {
        "borderRadius": 5,
      },
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "aquamarine",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(33, 33, 33, 0.87)",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      Heading
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders colored accordion element with heading, title and custom expand/collapse icons 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
        "overflow": "hidden",
        "width": "100%",
      },
      Object {
        "borderColor": "aquamarine",
        "borderWidth": 1,
      },
      Object {
        "borderRadius": 5,
      },
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "aquamarine",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(33, 33, 33, 0.87)",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      Heading
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
